update the url for the photos in aws

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "D:/Users/jdela/spring-workspace/Notebooks/src/main/resources/static",
+            "outputPath": "/home/rommel/Documentos/Proyectos/Spring/notebooks/src/main/resources/static",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
